# kumandra

./: .gitignore  .gitmodules  Cargo.toml  README.md  idea  rust-toolchain  rust-toolchain.toml  rustfmt.toml  structure  things_to_look_out
clients/: Cargo.toml
clients/chain-specs/: Cargo.toml
clients/consensus/: Cargo.toml  README.md
clients/src/: lib.rs  multisig.rs  session.rs  staking.rs  vesting.rs  waiting.rs
cumulus/: README.md
cumulus/node/: Cargo.toml  README.md
cumulus/node/src/: chain_spec.rs  cli.rs  lib.rs  rpc.rs  service.rs
cumulus/primitives/: Cargo.toml
cumulus/primitives/src/: lib.rs
cumulus/runtime/: Cargo.toml  build.rs
docker/: Dockerfile  build.sh  build_bin.sh
docs/: AccountGuide.md  BUILD.md  CONTRIBUTING.adoc  designs-of-storage-mining.md  rust-setup.md  setup.md
dragon/: Cargo.toml  README.md
dragon/src/: commands.rs  contracts.rs  keys.rs  lib.rs  main.rs  runtime.rs  staking.rs  transfer.rs  validators.rs  (+1 more)
farmer/: Cargo.toml  README.md
finality-kumandra/: Cargo.toml  README.md
flooder/: Cargo.toml
kprimitives/objects/: Cargo.toml
kprimitives/objects/src/: lib.rs
kprimitives/rpc/: Cargo.toml
kprimitives/runtime/: Cargo.toml
ktest/: README.md
ktest/client/: Cargo.toml
ktest/client/src/: chain_spec.rs  lib.rs
ktest/runtime/: Cargo.toml  build.rs
ktest/runtime/src/: lib.rs
ktest/service/: Cargo.toml
ktest/service/src/: lib.rs
kumandra-clients/consensus/: Cargo.toml  README.md
kumandra-clients/consensus/rpc/: Cargo.toml
kumandra-clients/consensus/rpc/src/: lib.rs
kumandra-clients/consensus/src/: archiver.rs  aux_schema.rs  lib.rs  notification.rs  slot_worker.rs  tests.rs  verification.rs
kumandra-node/: Cargo.toml  README.md  build.rs
kumandra-node/networking/: Cargo.toml
kumandra-node/networking/examples/: bootstrap-node.rs  networking.rs
kumandra-node/networking/src/: create.rs  lib.rs  multimess.rs  node.rs
kumandra-node/service/: Cargo.toml
kumandra-node/service/src/: lib.rs  rpc.rs
kumandra-node/src/: chain_spec.rs  import_blocks_from_dsn.rs  lib.rs  secondary_chain_cli.rs
kumandra-primitives/consensus/: Cargo.toml
kumandra-primitives/consensus/src/: digests.rs  inherents.rs  lib.rs  offence.rs
kumandra-primitives/executor/: Cargo.toml
kumandra-primitives/executor/src/: lib.rs
kumandra-primitives/runtime/: Cargo.toml
kumandra-primitives/runtime/src/: lib.rs
local-tests/: README.md  chainspec.json  run_nodes.py  test_catch_up.py  test_update.ipynb  test_update.py
modules/: README.md
modules/consensus/: Cargo.toml
modules/consensus/src/: archiver.rs  aux_schema.rs  lib.rs  notification.rs  slot_worker.rs  tests.rs  verification.rs
modules/solving/: Cargo.toml
modules/solving/src/: codec.rs  lib.rs
modules/solving/tests/integration/: codec.rs  main.rs
node/: Cargo.toml  README.md  build.rs
node/chains/: kumandra-develop-spec-raw.json  kumandra-testnet-spec-raw.json  kumandra-testnet-spec.json
node/network/: Cargo.toml
node/network/examples/: bootstrap-node.rs  networking.rs
node/network/src/: behavior.rs  create.rs  lib.rs  multimess.rs  node.rs  node_runner.rs  shared.rs  utils.rs
node/network/src/behavior/: custom_record_store.rs
node/res/: chain-spec-raw-gemini-1.json  chain-spec-raw-ktic-1.json  chain-spec-raw-x-net-1.json  kumandra-testnet-spec-raw.json
node/rpc/: Cargo.toml  README.md
node/rpc/src/: lib.rs
node/service/: Cargo.toml
node/service/src/: dsn.rs  lib.rs  pool.rs  rpc.rs
node/src/: chain_spec.rs  chain_spec_utils.rs  cli.rs  command.rs  commands.rs  executor.rs  import_blocks_from_dsn.rs  kumandra_cli.rs  lib.rs  main.rs  rpc.rs  secondary_chain.rs  secondary_chain_cli.rs  service.rs
node/src/resources/: mod.rs  testnet_raw_chainspec.json
node/src/secondary_chain/: chain_spec.rs  cli.rs
orml/: README.md
pallets/: README.md
pallets/executor/: Cargo.toml
pallets/executor/src/: lib.rs  tests.rs
pallets/feeds/: Cargo.toml  README.md
pallets/feeds/src/: feed_processor.rs  lib.rs  mock.rs  tests.rs
pallets/file-bank/: Cargo.toml
pallets/file-bank/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/file-storage/: Cargo.toml  README.md
pallets/file-storage/src/: lib.rs  runtime.rs
pallets/governance/: Cargo.toml  README.md
pallets/governance/src/: lib.rs  runtime.rs
pallets/kumandra/: Cargo.toml
pallets/kumandra-space/: Cargo.toml
pallets/kumandra-space/src/: default_weights.rs  equivocation.rs  lib.rs  mock.rs  tests.rs
pallets/kumandra/src/: default_weights.rs  equivocation.rs  lib.rs  mock.rs  tests.rs
pallets/kumandra/src/migrations/: v0_to_v1.rs  v1_to_v2.rs
pallets/object-store/: Cargo.toml  README.md
pallets/object-store/src/: lib.rs  mock.rs  tests.rs
primitives/: Cargo.toml
primitives/common/: Cargo.toml
primitives/consensus/: Cargo.toml
primitives/consensus/src/: digests.rs  inherents.rs  lib.rs  offence.rs  tests.rs
primitives/core/: Cargo.toml
primitives/core-primitives/: Cargo.toml
primitives/core-primitives/src/: crypto.rs  lib.rs  objects.rs
primitives/core/src/: crypto.rs  lib.rs  objects.rs
primitives/executor/: Cargo.toml
primitives/executor/src/: lib.rs
primitives/lightclient/: Cargo.toml  README.md
primitives/lightclient/src/: lib.rs  mock.rs  tests.rs
primitives/neak-node/: Cargo.toml
primitives/neak-node/src/: lib.rs
primitives/objects/: Cargo.toml
primitives/objects/src/: lib.rs
primitives/rpc/: Cargo.toml
primitives/rpc/src/: lib.rs
primitives/runtime/: Cargo.toml
primitives/runtime/src/: lib.rs
primitives/scheduler-credit/: Cargo.toml
primitives/scheduler-credit/src/: lib.rs
primitives/src/: lib.rs
primitives/verification/: Cargo.toml  README.md
primitives/verification/src/: lib.rs
rpc/: Cargo.toml
runtime/: Cargo.toml  build.rs
runtime/src/: .constants.rs.swp  constants.rs  fees.rs  impls.rs  lib.rs  object_mapping.rs  signed_extensions.rs
runtime/tests/integration/: object_mapping.rs
scripts/: build_on_arch  change2run.sh  run_nodes.sh
substrate/: README.md
(+464 files in other folders)
