[workspace]
members = [
    "runtime",

    "primitives/core-primitives",
    "primitives/executor",
    "primitives/consensus",
    "primitives",

    # Kumandra Pallet
    "pallets/executor",
    "pallets/feeds",
    "pallets/object-store",
    "pallets/offences",
    "pallets/rewards",
    "pallets/kumandra-space",
    "pallets/transaction-fees",

    # Modules
    "modules/solving",
]

[profile.release]
# Selendra runtime requires unwinding.
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true