[workspace]
members = [
    "runtime",

    "primitives/core",
    "primitives/executor",
    "primitives/consensus",
    "primitives/rpc",
    "primitives/neak-node",
    "primitives",

    # Kumandra Pallet
    "pallets/executor",
    "pallets/feeds",
    "pallets/object-store",
    "pallets/offences",
    "pallets/rewards",
    "pallets/kumandra",
    "pallets/transaction-fees",

    # Modules
    "modules/solving",
    "modules/archiving",
    "modules/consensus",

    # Utilities
    "utils/kumandra-wasm-tools",
    "utils/fraud-proof",

    # Node
    "node",
    "node/network",
    "node/service",

    # RPC
    "rpc",

    # Selendra
    "selendra/node/collation-generation",
    "selendra/node/core/chain-api",
    "selendra/node/core/runtime-api",
    "selendra/node/metered-channel",
    "selendra/node/overseer",
    "selendra/node/overseer/overseer-gen",
    "selendra/node/overseer/overseer-gen/proc-macro",
    "selendra/node/subsystem",
    "selendra/node/subsystem-types",
]

[profile.release]
# Selendra runtime requires unwinding.
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true