[package]
name = "kumandra-node"
version = "0.1.0"
authors = ["Kumandra <https://kumandra.org>"]
description = "Kumandra Protocol Blockchain node."
edition = "2021"
license = "GPL-3.0-or-later"
build = "build.rs"
homepage = "https://koompi.com"
repository = "https://github.com/kumandra/kumandra"
include = [
	"/res",
	"/src",
	"/build.rs",
	"/Cargo.toml",
	"/README.md"
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cirrus-node = { version = "0.1.0", path = "../cumulus/node" }
cirrus-runtime = { version = "0.1.0", path = "../cumulus/runtime" }
clap = { version = "3.2.12", features = ["derive"] }
dirs = "4.0.0"
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86", default-features = false, features = ["runtime-benchmarks"] }
frame-support = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
futures = "0.3.21"
log = "0.4.17"
parity-scale-codec = "3.1.5"
sc-cli = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86", default-features = false, features = ["wasmtime"] }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
kc-kumandra-chain-specs = { version = "0.1.0", path = "../clients/chain-specs" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86", features = ["wasmtime"] }
sc-service = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86", default-features = false, features = ["wasmtime"] }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sc-tracing = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
serde = "1.0.139"
serde_json = "1.0.82"
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sp-core = { version = "6.0.0", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
kp-executor = { version = "0.1.0", path = "../primitives/executor" }
sp-runtime = { version = "6.0.0", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
kumandra-archiving = { version = "0.1.0", path = "../modules/archiving" }
kumandra-core-primitives = { version = "0.1.0", path = "../primitives/core" }
kumandra-networking = { version = "0.1.0", path = "../modules/networking" }
kumandra-runtime = { version = "0.1.0", path = "../runtime" }
kumandra-runtime-primitives = { version = "0.1.0", path = "../primitives/runtime" }
kumandra-service = { version = "0.1.0", path = "../node/service" }
thiserror = "1.0.31"
tokio = { version = "1.20.0" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }

[features]
default = ["do-not-enforce-cost-of-storage"]
do-not-enforce-cost-of-storage = [
	"kumandra-runtime/do-not-enforce-cost-of-storage"
]
runtime-benchmarks = [
	"cirrus-node/runtime-benchmarks",
	"cirrus-runtime/runtime-benchmarks",
	"kumandra-runtime/runtime-benchmarks",
]
