[package]
name = "kumandra-primitives"
version = "0.1.0"
authors = ["Kumandra"]
edition = "2021"
description = "Runtime primitives for Kumandra Network"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { version = "3.1.2", default-features = false, features = ["derive"] }
parity-util-mem = { version = "0.11.0", optional = true, default-features = false, features = ["primitive-types"] }
serde = { version = "1.0.136", optional = true, features = ["derive"] }

sp-core = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998", default-features = false }
kumandra-core-primitives = { path = "./core-primitives", default-features = false }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"parity-util-mem/std",
	"serde/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"kumandra-core-primitives/std",
]
