[package]
name = "kumandra-runtime-primitives"
version = "0.1.0"
authors = ["Kumandra"]
edition = "2021"
description = "Runtime primitives for Kumandra Network"

include = [
	"/src",
	"/Cargo.toml",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { version = "3.1.2", default-features = false, features = ["derive"] }
parity-util-mem = { version = "0.11.0", optional = true, default-features = false, features = ["primitive-types"] }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998" }
kumandra-core-primitives = { version = "0.1.0", default-features = false, path = "./core-primitives" }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"parity-util-mem/std",
	"serde/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"kumandra-core-primitives/std",
]